envoy-config/envoy.yml
# @link: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/grpc_json_transcoder_filter
# @link: https://www.vijaykonnackal.com/json-grpc-transcoding/
# @link: https://developers.google.com/custom-search/v1/using_rest

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          stat_prefix: grpc_json
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
                - match:
                    prefix: "/helloworld.HelloWorldService/"
                    grpc: {}
                  route:
                    cluster: service_helloworld
                    timeout: 5.00s
          http_filters:
            - name: envoy.filters.http.grpc_json_transcoder
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.http.transcoder.v2.GrpcJsonTranscoder
                proto_descriptor: "/etc/envoy/helloworld.pb"
                services: ["helloworld.HelloWorldService"]
                print_options:
                  add_whitespace: true
                  always_print_primitive_fields: true
                  always_print_enums_as_ints: false
                  preserve_proto_field_names: false
            - name: envoy.filters.http.router
          
  clusters:
  - name: service_helloworld
    connect_timeout: 5.00s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: service_helloworld
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: grpc-api
                    port_value: 11000
